Added Links to the Footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <header>World Clock</header>
-    <Footer>Coded by <a href="https://github.com/MutableSpectre">Stephanie Ratliff-Putney</a>, open sourced on <a href="">Github</a>, and hosted on <a href="">Netlify</a>.</Footer>
+    <Footer>Coded by <a href="https://github.com/MutableSpectre">Stephanie Ratliff-Putney</a>, open sourced on <a href="https://github.com/MutableSpectre/srp-world-clock-project">Github</a>, and hosted on <a href="">Netlify</a>.</Footer>
 </body>
 </html>
