--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         open sourced on <a href="https://github.com/MutableSpectre/srp-world-clock-project">Github</a>, 
         and hosted on <a href="">Netlify</a>.
     </Footer>
+    <script src="javascript/script.js"></script>
 </body>
 </html>
