--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>World Clock</header>
     <Footer>Coded by <a href="https://github.com/MutableSpectre">Stephanie Ratliff-Putney</a>, 
         open sourced on <a href="https://github.com/MutableSpectre/srp-world-clock-project">Github</a>, 
-        and hosted on <a href="">Netlify</a>.
+        and hosted on <a href="https://srp-world-clock-project.netlify.app/">Netlify</a>.
     </Footer>
     <script src="javascript/script.js"></script>
 </body>
