--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>World Clock</header>
-    <Footer>Coded by <a href="https://github.com/MutableSpectre">Stephanie Ratliff-Putney</a>, 
-        open sourced on <a href="https://github.com/MutableSpectre/srp-world-clock-project">Github</a>, 
-        and hosted on <a href="https://srp-world-clock-project.netlify.app/">Netlify</a>.
+    <Footer>Coded by <a href="https://github.com/MutableSpectre" target="_blank">Stephanie Ratliff-Putney</a>, 
+        open sourced on <a href="https://github.com/MutableSpectre/srp-world-clock-project" target="_blank">Github</a>, 
+        and hosted on <a href="https://srp-world-clock-project.netlify.app/" target="_blank">Netlify</a>.
     </Footer>
     <script src="javascript/script.js"></script>
 </body>
