--- a/index.html
+++ b/index.html
@@ -2,16 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>SRP World Clock Project</title>
 </head>
 <body>
-    <header>World Clock</header>
-    <Footer>Coded by <a href="https://github.com/MutableSpectre" target="_blank">Stephanie Ratliff-Putney</a>, 
-        open sourced on <a href="https://github.com/MutableSpectre/srp-world-clock-project" target="_blank">Github</a>, 
-        and hosted on <a href="https://srp-world-clock-project.netlify.app/" target="_blank">Netlify</a>.
-    </Footer>
+    <div class="container" id="content-container">
+        <h1>World Clock</h1>
+        <select name="city-selector" id="city-dropdown" class="city-dropdown">
+            <option value="">--Please Select a City--</option>
+            <option value="Lansing">Lansing</option>
+            <option value="Ecorse">Ecorse</option>
+            <option value="Ishpeming">Ishpeming</option>
+        </select>
+        <div class="city">
+            <h2>Lansing</h2>
+        </div>
+        <div class="date">August 30th, 2024</div>
+        <div class="time">5:45:15 AM</div>
+        <div class="city">
+            <h2>Lansing</h2>
+        </div>
+        <div class="date">August 30th, 2024</div>
+        <div class="time">5:45:15 AM</div>
+    </div> 
+    </div>
+
+        <Footer>Coded by <a href="https://github.com/MutableSpectre" target="_blank">Stephanie Ratliff-Putney</a>, 
+            open sourced on <a href="https://github.com/MutableSpectre/srp-world-clock-project" target="_blank">Github</a>, 
+            and hosted on <a href="https://srp-world-clock-project.netlify.app/" target="_blank">Netlify</a>.
+        </Footer>
     <script src="javascript/script.js"></script>
 </body>
 </html>
