Added CSS to Project
Styled project with CSS

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
             <option value="Ishpeming">Ishpeming</option>
         </select>
         <div class="city">
+            <div>
             <h2>Lansing</h2>
-        </div>
         <div class="date">August 30th, 2024</div>
-        <div class="time">5:45:15 AM</div>
+            </div>
+        <div class="time">5:45:15 <small>AM</small></div>
+        </div>
         <div class="city">
             <h2>Lansing</h2>
         </div>
@@ -28,7 +30,7 @@
     </div> 
     </div>
 
-        <Footer>Coded by <a href="https://github.com/MutableSpectre" target="_blank">Stephanie Ratliff-Putney</a>, 
+        <Footer>Coded by <a href="https://github.com/MutableSpectre" target="_blank"><strong>Stephanie Ratliff-Putney</strong></a>, 
             open sourced on <a href="https://github.com/MutableSpectre/srp-world-clock-project" target="_blank">Github</a>, 
             and hosted on <a href="https://srp-world-clock-project.netlify.app/" target="_blank">Netlify</a>.
         </Footer>
