Added Flags and Cities to Project

--- a/index.html
+++ b/index.html
@@ -17,7 +17,28 @@
         </select>
         <div class="city">
             <div>
-            <h2>Lansing</h2>
+            <h2>Los Angeles 🇺🇸</h2>
+        <div class="date">August 30th, 2024</div>
+            </div>
+        <div class="time">5:45:15 <small>AM</small></div>
+        </div>
+        <div class="city">
+            <div>
+            <h2>Sydney 🇦🇺</h2>
+        <div class="date">August 30th, 2024</div>
+            </div>
+        <div class="time">5:45:15 <small>AM</small></div>
+        </div>
+        <div class="city">
+            <div>
+            <h2>Tokyo 🇯🇵</h2>
+        <div class="date">August 30th, 2024</div>
+            </div>
+        <div class="time">5:45:15 <small>AM</small></div>
+        </div>
+        <div class="city">
+            <div>
+            <h2>Paris 🇫🇷</h2>
         <div class="date">August 30th, 2024</div>
             </div>
         <div class="time">5:45:15 <small>AM</small></div>
