--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>SRP World Clock Project</title>
 </head>
 <body>
@@ -11,32 +13,33 @@
         <h1>World Clock</h1>
         <select name="city-selector" id="city-dropdown" class="city-dropdown">
             <option value="">--Please Select a City--</option>
-            <option value="Lansing">Lansing</option>
-            <option value="Ecorse">Ecorse</option>
-            <option value="Ishpeming">Ishpeming</option>
+            <option value="Lansing">Los Angeles</option>
+            <option value="Ecorse">Sydney</option>
+            <option value="Ishpeming">Tokyo</option>
+            <option value="paris">Paris</option>
         </select>
-        <div class="city">
+        <div class="city" id="los-angeles">
             <div>
             <h2>Los Angeles 🇺🇸</h2>
         <div class="date">August 30th, 2024</div>
             </div>
         <div class="time">5:45:15 <small>AM</small></div>
         </div>
-        <div class="city">
+        <div class="city" id="sydney">
             <div>
             <h2>Sydney 🇦🇺</h2>
         <div class="date">August 30th, 2024</div>
             </div>
         <div class="time">5:45:15 <small>AM</small></div>
         </div>
-        <div class="city">
+        <div class="city" id="tokyo">
             <div>
             <h2>Tokyo 🇯🇵</h2>
         <div class="date">August 30th, 2024</div>
             </div>
         <div class="time">5:45:15 <small>AM</small></div>
         </div>
-        <div class="city">
+        <div class="city" id="paris">
             <div>
             <h2>Paris 🇫🇷</h2>
         <div class="date">August 30th, 2024</div>
