--- a/index.html
+++ b/index.html
@@ -21,30 +21,30 @@
         <div class="city" id="los-angeles">
             <div>
             <h2>Los Angeles 🇺🇸</h2>
-        <div class="date">August 30th, 2024</div>
+        <div class="date"></div>
             </div>
-        <div class="time">5:45:15 <small>AM</small></div>
+        <div class="time"></div>
         </div>
         <div class="city" id="sydney">
             <div>
             <h2>Sydney 🇦🇺</h2>
-        <div class="date">August 30th, 2024</div>
+        <div class="date"></div>
             </div>
-        <div class="time">5:45:15 <small>AM</small></div>
+        <div class="time"></div>
         </div>
         <div class="city" id="tokyo">
             <div>
             <h2>Tokyo 🇯🇵</h2>
-        <div class="date">August 30th, 2024</div>
+        <div class="date"></div>
             </div>
-        <div class="time">5:45:15 <small>AM</small></div>
+        <div class="time"></div>
         </div>
         <div class="city" id="paris">
             <div>
             <h2>Paris 🇫🇷</h2>
-        <div class="date">August 30th, 2024</div>
+        <div class="date"></div>
             </div>
-        <div class="time">5:45:15 <small>AM</small></div>
+        <div class="time"></div>
         </div>
     </div>
 
