--- a/index.html
+++ b/index.html
@@ -13,40 +13,41 @@
         <h1>World Clock</h1>
         <select name="city-selector" id="city-dropdown" class="city-dropdown">
             <option value="">--Please Select a City--</option>
-            <option value="Lansing">Los Angeles</option>
-            <option value="Ecorse">Sydney</option>
-            <option value="Ishpeming">Tokyo</option>
+            <option value="America/Detriot">Lansing</option>
+            <option value="Pacific/Auckland">Auckland</option>
+            <option value="Europe/London">London</option>
         </select>
-        <div class="city" id="los-angeles">
-            <div>
-            <h2>Los Angeles 🇺🇸</h2>
-        <div class="date"></div>
+        <div class="cities">
+            <div class="city" id="los-angeles">
+                <div>
+                <h2>Los Angeles 🇺🇸</h2>
+            <div class="date"></div>
+                </div>
+            <div class="time"></div>
             </div>
-        <div class="time"></div>
-        </div>
-        <div class="city" id="sydney">
-            <div>
-            <h2>Sydney 🇦🇺</h2>
-        <div class="date"></div>
+            <div class="city" id="sydney">
+                <div>
+                <h2>Sydney 🇦🇺</h2>
+            <div class="date"></div>
+                </div>
+            <div class="time"></div>
             </div>
-        <div class="time"></div>
-        </div>
-        <div class="city" id="tokyo">
-            <div>
-            <h2>Tokyo 🇯🇵</h2>
-        <div class="date"></div>
+            <div class="city" id="tokyo">
+                <div>
+                <h2>Tokyo 🇯🇵</h2>
+            <div class="date"></div>
+                </div>
+            <div class="time"></div>
             </div>
-        <div class="time"></div>
-        </div>
-        <div class="city" id="paris">
-            <div>
-            <h2>Paris 🇫🇷</h2>
-        <div class="date"></div>
+            <div class="city" id="paris">
+                <div>
+                <h2>Paris 🇫🇷</h2>
+            <div class="date"></div>
+                </div>
+            <div class="time"></div>
             </div>
-        <div class="time"></div>
         </div>
     </div>
-
         <Footer>Coded by <a href="https://github.com/MutableSpectre" target="_blank"><strong>Stephanie Ratliff-Putney</strong></a>, 
             open sourced on <a href="https://github.com/MutableSpectre/srp-world-clock-project" target="_blank">Github</a>, 
             and hosted on <a href="https://srp-world-clock-project.netlify.app/" target="_blank">Netlify</a>.
