--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <option value="Pacific/Auckland">Auckland</option>
             <option value="Europe/London">London</option>
         </select>
-        <div class="cities">
+        <div id="cities">
             <div class="city" id="los-angeles">
                 <div>
                 <h2>Los Angeles 🇺🇸</h2>
