--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container" id="content-container">
         <h1>World Clock</h1>
-        <select name="city-selector" id="city-dropdown" class="city-dropdown">
+        <select name="city-selector" id="city" class="city-dropdown">
             <option value="">--Please Select a City--</option>
             <option value="America/Detriot">Lansing</option>
             <option value="Pacific/Auckland">Auckland</option>
