--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1>World Clock</h1>
         <select name="city-selector" id="city" class="city-dropdown">
             <option value="">--Please Select a City--</option>
+            <option value="current">My Current Location</option>
             <option value="America/Detriot">Lansing</option>
             <option value="Pacific/Auckland">Auckland</option>
             <option value="Europe/London">London</option>
