Added Link to H1 Element

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="container" id="content-container">
-        <h1>World Clock</h1>
+        <h1>
+            <a href="/">World Clock</a>
+        </h1>
         <select name="city-selector" id="city" class="city-dropdown">
             <option value="">--Please Select a City--</option>
             <option value="current">My Current Location</option>
